# ha-state-archive

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: docker-publish.yml  tests.yml
config/: retention_policy.example.yaml
docs/: architecture.md  audit.md  diff.md  ingestion.md  invariants.md  mqtt.md  purge.md  retention.md  synology_dsm.md
examples/: mqtt_payload.example.json  quarantine_purger_policy.example.yaml  retention_policy.example.yaml
scripts/: init_project.py  install_check.py  run_pipeline.sh  watch_new_backup.sh
src/ha_state_archive/audit/: audit_engine.py  declaration_extractor.py  include_resolver.py  reference_extractor.py  registry_reader.py
src/ha_state_archive/diff/: release_diff.py
src/ha_state_archive/ingestion/: extract.py
src/ha_state_archive/mqtt/: publish_audit_mqtt.py  publisher.py
src/ha_state_archive/retention/: quarantine_purger.py  retention_manager.py
src/ha_state_archive/tools/: init_project.py
tests/: conftest.py  test_init_project_contract.py  test_quarantine_purger_contract.py  test_release_diff_contract.py  test_retention_manager_contract.py  test_verdict_mqtt_contract.py
