[project]
name = "ha-state-archive"
version = "0.1.0"
description = "A structured archival system for Home Assistant focused on automated auditing, state versioning and configuration integrity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }

authors = [
    { name = "Antoine Valentin" }
]

keywords = [
    "home-assistant",
    "backup",
    "audit",
    "archive",
    "versioning",
    "mqtt",
    "synology"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: System :: Archiving",
    "Topic :: System :: Systems Administration"
]

dependencies = [
    "PyYAML>=6.0"
]

[project.urls]
Homepage = "https://github.com/antoinevalentinHA/ha-state-archive"
Repository = "https://github.com/antoinevalentinHA/ha-state-archive"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]