[project]
name = "ha-state-archive"
version = "0.8.0"
description = "A structured archival system for Home Assistant focused on automated auditing, state versioning and configuration integrity."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }

authors = [
    { name = "Antoine Valentin" }
]

keywords = [
    "home-assistant",
    "backup",
    "audit",
    "archive",
    "versioning",
    "mqtt",
    "synology"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Home Automation",
    "Topic :: System :: Archiving",
    "Topic :: System :: Systems Administration"
]

dependencies = [
    "PyYAML>=6.0",
    "paho-mqtt>=2.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
ha-state-extract      = "ha_state_archive.ingestion.extract:main"
ha-state-audit        = "ha_state_archive.audit.audit_engine:main"
ha-state-diff         = "ha_state_archive.diff.release_diff:main"
ha-state-retention    = "ha_state_archive.retention.retention_manager:main"
ha-state-purge        = "ha_state_archive.retention.quarantine_purger:main"
ha-state-publish-mqtt = "ha_state_archive.mqtt.publish_audit_mqtt:main"
ha-state-init         = "ha_state_archive.tools.init_project:main"

[project.urls]
Homepage = "https://github.com/antoinevalentinHA/ha-state-archive"
Repository = "https://github.com/antoinevalentinHA/ha-state-archive"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]